# egoannot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SPEC.md  config.yaml  pyproject.toml
scripts/: smoke_db.py  smoke_end2end.py  smoke_jaad_2clips.py  smoke_scene.py  smoke_schemas.py
src/egoannot/: __init__.py  assemble.py  cli.py  config.py  curate.py  dashboard.py  export.py  ingest.py  logging.py  orchestrator.py
src/egoannot/db/: __init__.py  models.py  session.py
src/egoannot/media/: __init__.py  frames.py
src/egoannot/schemas/: __init__.py  annotation.py  enums.py  subtasks.py
src/egoannot/tasks/: __init__.py  base.py  caption.py  entities.py  events.py  judgment.py  qa.py  scene.py
src/egoannot/vlm/: __init__.py  client.py  mock.py  prompts.py
tests/: conftest.py  test_assemble.py  test_frames.py  test_ingest.py  test_orchestrator_mock.py  test_schemas.py
