[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egoannot"
version = "0.1.0"
description = "Batch pipeline that annotates egocentric navigation videos with a locally served Qwen3-VL model."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "LicenseRef-All-Rights-Reserved" }
authors = [{ name = "egoannot maintainers" }]
keywords = ["egocentric", "video", "annotation", "qwen", "vlm", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "typer>=0.12.5",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
    "pillow>=10.4.0",
    "rich>=13.8.0",
    "streamlit>=1.38.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4",
    "black>=24.8.0",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
egoannot = "egoannot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/egoannot"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "N",             # pep8-naming
]
ignore = [
    "E501",  # line length handled by black
    "B008",  # allow Typer's Argument()/Option() defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = ["error"]
